fix: Improve dark mode button borders (fixes #32)

--- a/assets/scss/_dark_mode.scss
+++ b/assets/scss/_dark_mode.scss
@@ -39,7 +39,7 @@
 
         .btn {
             color: #fff;
-            border-color: bootstrap.$gray-800;
+            border-color: rgba(255, 255, 255, 0.1);
 
             &:hover {
                 color: bootstrap.$dark;
